--- a/face.html
+++ b/face.html
@@ -1,5 +1,6 @@
 <html>
     <head>
+        <meta charset="utf-8">
         <title>Калькулятор схемы обжига керамики</title>
         <link rel="stylesheet" href="/css.css" />
     </head>
