--- a/face.html
+++ b/face.html
@@ -2,7 +2,7 @@
     <head>
         <meta charset="utf-8">
         <title>Калькулятор схемы обжига керамики</title>
-        <link rel="stylesheet" href="/css.css" />
+        <link rel="stylesheet" href="./css.css" />
     </head>
     <body>
         <h1>Калькулятор схемы обжига керамики</h1>
@@ -94,6 +94,6 @@
                 console.log('did something?');
             }
         </script>
-        <script src="/guts.js"></script>
+        <script src="./guts.js"></script>
     </body>
 </html>
