--- a/face.html
+++ b/face.html
@@ -11,8 +11,8 @@
             <div>
                 Состояние:
                 <select class="state" onchange="recalculate()">
-                    <option value="4">кожетвердое</option>
-                    <option value="3">сухое</option>
+                    <option value="3">полусухое</option>
+                    <option value="1">сухое</option>
                     <option value="0">обожженное (выше 600°C)</option>
                 </select>
             </div>
